# quickchart-rs

./: Cargo.toml  LICENSE  README.md
examples/: get_short_url.rs  get_url.rs  to_file.rs
src/: lib.rs  quickchart_client.rs  quickchart_client_test.rs
