[package]
name = "quickchart-rs"
version = "0.1.0"
edition = "2021"
authors = ["Tim Hillier <tim.r.hillier@gmail.com>"]
description = "Quickchart.io Api wrapper"
license = "MIT"

[dependencies]
reqwest = "0.12.24"
thiserror = "2.0.17"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5.7"
