[package]
name = "quickchart-rs"
version = "0.1.1"
edition = "2021"
authors = ["Tim Hillier <tim.r.hillier@gmail.com>"]
description = "Quickchart.io Api wrapper"
license = "MIT"
repository = "https://github.com/TimHillier/quickchart-rs"
readme = "README.md"
keywords = ["quickchart", "api", "graphs", "charts"]
categories = ["api-bindings", "visualization"]

[dependencies]
reqwest = "0.12.24"
thiserror = "2.0.17"
serde_json = "1.0.145"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }